Talbin wields a Wolf Blade instead of a branch.
Talbin will teach NH hunting once escorted to Khorinis.
Talbins dialog creates a journal note of him being a teacher only after he agrees to teach NH.
Thekla now grants previously omitted XP bonus for defeating Bullco.
Thorben does not immediately take Lehmar's book of debts, instead another dialog option is created just for giving the book.
Torlof won't be asked about location of Bengar or Sekobs farm if NH already met them.
Ulf does not randomly die in the beginning of chapter 3.
Ulf smokes a joint as well instead of watching as NH smokes one.
Ur-Shak has an orcish axe, like the other orc shamans have.
Ur-Shak will not wait for NH to talk to him.
Ur-Shak will tell the NH to go over pass when spoken to, before realising the cause of Hosh-Pak's death.
Vatras actually takes the orders from Raven and grants experience for all evidence not already reported.
Vatras can be asked for help joining the monastery only if not already part of a guild.
Vatras can be asked where to find a priest of Innos only before talking to Daron.
Vatras cannot be donated to usually, but instead he asks for a donation for his blessing.
Vatras cannot be told about Lucia before reading her letter or talking to Elvrich about it.
Vatras closes quest "Wanted Notes and Bandits" if it is still open when returning the orders from Raven.
Vatras dialog creates a journal note about Martin only once he mentions him.
Vatras dialog no longer has "MORE" option, instead options are only shown when they are relevant and options are hidden when no longer relevant.
Vatras dialog won't have a mention of the novice at monastery gate if NH did not meet him.
Vatras gives different scrolls as reward for bringing stone tablets, if NH has corresponding runes.
Vatras gives his first and last warning for killing innocents earlier and does not give a second chance if NH kills too many people.